--- a/android-developer.html
+++ b/android-developer.html
@@ -49,7 +49,11 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692219387-senior-android-developer-banking-sector-'>Lecle Vietnam Senior Android Developer (Banking Sector) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999692275589-android-developer'>Prospect Infosys Inc. Android Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692219387-senior-android-developer-banking-sector-'>Lecle Vietnam Senior Android Developer (Banking Sector) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam Vietnam</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -240,7 +244,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workforcesource.recruiterbox.com/jobs/fk036u8/'>
+<h5><a href='https://workforcesource.recruiterbox.com/jobs/fk036u8/'>
     0708 - Stong Mid Android Developer at Workforce Source
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -405,7 +409,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LenmarConsultingInc/743999691040325-android-developer-w2-contract-gc-and-citizens-only-'>Lenmar Consulting Inc. Android Developer (W2 Contract - GC and Citizens only) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LenmarConsultingInc/743999691040325-android-developer-w2-contract-gc-and-citizens-only-'>Lenmar Consulting Inc. Android Developer (W2 Contract - GC and Citizens only) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ann Arbor, MI, USA</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -437,7 +441,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Ho Chi Minh Ho Chi Minh</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vezeeta.workable.com/j/81C90BD741'>Vezeeta - Jobs: Android Developer - Dubai - Apply online</a></h5> 
+<h5><a href='https://vezeeta.workable.com/j/81C90BD741'>Vezeeta - Jobs: Android Developer - Dubai - Apply online</a></h5> 
 <p><span class="badge badge-light">Dubai Dubai</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
@@ -477,14 +481,10 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<h5><a href='https://vivint.wd5.myworkdayjobs.com/vivintjobs/job/Boston-MA/Sr-Android-Developer_R109820-1'>Sr. Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vivint.wd5.myworkdayjobs.com/vivintjobs/job/Boston-MA/Sr-Android-Developer_R109820-1'>Sr. Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... You're a mobile software engineer with significant experience developing world-
 class Android applications. You work hard to play hard and take pride in?...</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oUGZ9fws&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nbbFwKwM'>Benefitfocus Careers - Android Developer (Relocation Opportunity)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-06-29</p>
 <hr/>
 
 
