--- a/devops.html
+++ b/devops.html
@@ -38,11 +38,19 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/YapilyLtd/743999692372874-devops-engineer'>Yapily Ltd DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.jobvite.com/schneider-electric/job/oas49fwz'>Schneider Electric NAM Careers - Security Team Leader (Cloud, Big Data, DevOps, Risk Assurance)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://upvest.join.com/jobs/261712-senior-lead-devops-engineer-m-f-d-berlin'>Job @ Upvest (Berlin): Senior/Lead DevOps Engineer... | JOIN</a></h5> 
+<h5><a href='https://aluperf.referrals.selectminds.com/jobs/co-op-software-engineer-devops-33201'>Co-op Software Engineer - DevOps - Nokia Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/YapilyLtd/743999692372874-devops-engineer'>Yapily Ltd DevOps Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">London</span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://upvest.join.com/jobs/261712-senior-lead-devops-engineer-m-f-d-berlin'>Job @ Upvest (Berlin): Senior/Lead DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -54,7 +62,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://livinggoods.applytojob.com/apply/KM6fHaI5Sg/Devops-Engineer'>Devops Engineer - Living Goods - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://livinggoods.applytojob.com/apply/KM6fHaI5Sg/Devops-Engineer'>Devops Engineer - Living Goods - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -86,7 +94,7 @@
 <p><span class="badge badge-light">Boston Bangalore Boston</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ehealth/job/onQCafwJ'>eHealth Careers - Manager, DevOps</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ehealth/job/onQCafwJ'>eHealth Careers - Manager, DevOps</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -154,7 +162,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShoreConsulting/743999692340811-senior-devops-engineer'>Shore Consulting Senior DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ShoreConsulting/743999692340811-senior-devops-engineer'>Shore Consulting Senior DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -226,7 +234,7 @@ Apply for this job. About Us. Alfresco Software, Inc. (?Alfresco?) is an enterpr
 Engineer to work with our product development team and clients. You will be 
 leading?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://artificialsolutions46581.recruiterbox.com/jobs/fk03fby'>
+<h5><a href='http://artificialsolutions46581.recruiterbox.com/jobs/fk03fby'>
     DevOps Engineer (Software Development) at Artificial Solutions
 </a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
@@ -248,7 +256,7 @@ leading?...</p>
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/57d8pkzu9b61ndhtsuq7pwixfy'>DevOps Engineer | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/57d8pkzu9b61ndhtsuq7pwixfy'>DevOps Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -261,7 +269,7 @@ leading?...</p>
 <p>Jul 16, 2019 ... Overall 8+ years of Experience in Development and 2+ years in DevOps; This 
 needs to be a hands-on developer resource not an Admin resource (release?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/vocera-communications-inc/job/ofMmafwh'>Vocera Communications, Inc. Careers - Sr. DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/vocera-communications-inc/job/ofMmafwh'>Vocera Communications, Inc. Careers - Sr. DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... We believe in automation of operational tasks and are seeking an operational 
 engineer with a developer mindset. You will direct and communicate the long-
@@ -291,7 +299,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://firstwestcu.referrals.selectminds.com/jobs/devops-engineer-1704'>DevOps Engineer - First West Credit Union Careers</a></h5> 
+<h5><a href='https://firstwestcu.referrals.selectminds.com/jobs/devops-engineer-1704'>DevOps Engineer - First West Credit Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -361,7 +369,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_capita/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=306900&localeCode=en-us'>Capita - DevOps Engineer - UK - England - London UK - England ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_capita/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=306900&localeCode=en-us'>Capita - DevOps Engineer - UK - England - London UK - England ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Let your line manager know and click apply now to a short application and send 
 us your CV. Any questions before taking the next step? You can contact Dorian.</p>
@@ -407,7 +415,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SanaCommerce/743999692207182-devops-engineer'>Sana Commerce DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SanaCommerce/743999692207182-devops-engineer'>Sana Commerce DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -449,14 +457,6 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/INNOVIEW/743999692161526-devops-engineer'>Innoview DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/cern/743999692087623-it-development-and-operations-tools-technician-devops-tte-programme-'>CERN IT Development and Operations tools Technician - DevOps (TTE Programme) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/cloudbees/jobs/1786226'>Job Application for DevOps Consultant, Remote  at CloudBees</a></h5> 
-<p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
 
