--- a/full-stack.html
+++ b/full-stack.html
@@ -66,7 +66,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4371531002'>Job Application for Full Stack Developer ? Customer Engagement at Arctic Wolf Networks</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4371531002'>Job Application for Full Stack Developer ? Customer Engagement at Arctic Wolf Networks</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -74,7 +74,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CaziSoft/743999692409229-sr-full-stack-software-engineer'>CaziSoft Sr. Full Stack Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CaziSoft/743999692409229-sr-full-stack-software-engineer'>CaziSoft Sr. Full Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -94,7 +94,7 @@
 <p><span class="badge badge-light">Manhattan Beach</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/6sense/jobs/1791865'>Job Application for Full Stack Engineer at 6sense</a></h5> 
+<h5><a href='https://boards.greenhouse.io/6sense/jobs/1791865'>Job Application for Full Stack Engineer at 6sense</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -106,7 +106,7 @@
 <p><span class="badge badge-light">San Francisco San Francisco</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/papercut/161ea9b1-ef1f-42d8-b71a-db731972d553'>PaperCut Software - Full Stack Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/papercut/161ea9b1-ef1f-42d8-b71a-db731972d553'>PaperCut Software - Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -197,7 +197,7 @@ Platform?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999692194360-software-engineer-qa-full-stack-javascript-'>K4Connect Software Engineer - QA (Full Stack JavaScript) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999692194360-software-engineer-qa-full-stack-javascript-'>K4Connect Software Engineer - QA (Full Stack JavaScript) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -206,7 +206,7 @@ Platform?...</p>
 <p>Jul 17, 2019 ... Research, architect and implement responsive, reusable, customizable next 
 generation web and mobile components and interfaces. Design and build a?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vinterior.workable.com/j/AC72F594CD'>Vinterior - Jobs: Senior Full Stack Developer - Apply online</a></h5> 
+<h5><a href='https://vinterior.workable.com/j/AC72F594CD'>Vinterior - Jobs: Senior Full Stack Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -218,7 +218,7 @@ generation web and mobile components and interfaces. Design and build a?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/communitybrands/job/onpBafwh'>Community Brands Careers - Full Stack Software Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/communitybrands/job/onpBafwh'>Community Brands Careers - Full Stack Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -323,7 +323,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProximateTechnologiesInc1/743999692243109-java-full-stack-developer'>Proximate Technologies Inc. Java Full Stack Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ProximateTechnologiesInc1/743999692243109-java-full-stack-developer'>Proximate Technologies Inc. Java Full Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -341,7 +341,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://itech.applytojob.com/apply/CGb47FE6rN/Full-Stack-Developer'>Full Stack Developer - iTech Media - Career Page</a></h5> 
+<h5><a href='http://itech.applytojob.com/apply/CGb47FE6rN/Full-Stack-Developer'>Full Stack Developer - iTech Media - Career Page</a></h5> 
 <p><span class="badge badge-light">Warsaw Warsaw, Poland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
